# PECANN-DPC

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  IO.h  Makefile  README.md  blindprobe.h  bruteforce.h  create_graphs.sh  doubling_dpc.cpp  experiments.py  methods.h  pyproject.toml  python_bindings.cc  requirements.txt  temp  temp2  test.py  test_clustering_strats.py  union_find.h  union_find.py  utils.h
.cache/clangd/index/: IO.h.A341FABC52413ACE.idx  LSHFamily.cpp.AAAA9DE7A43B6AE7.idx  LSHFamily.h.74290E690E7F648C.idx  NSGDist.h.20A5387193B64108.idx  RACE.cpp.4ACF9F5E854E997F.idx  RACE.h.93BDF8219D6B32D6.idx  RACE.h.C8D69867C9CC5B09.idx  acquire_retire.h.F6CC87E14D6A46C6.idx  alloc.h.7736E18127A7585E.idx  atomic_wait.h.F3DBA2EAC60C0233.idx  beamSearch.h.A845157AB15ED2EF.idx  binary_search.h.FE6A910CAEBC6EB8.idx  block_allocator.h.D16A85FFF05A3EBF.idx  block_delayed.h.D19F110362816BF8.idx  bruteforce.cpp.1CD510000196902E.idx  bruteforce.h.51160579BAEB3431.idx  bucket_sort.h.55CBFE126A8885D1.idx  check_nn_recall.h.321309E85282862F.idx  clusterEdge.h.3C72694D76B99C39.idx  clusterPynn.h.6267E065122E915F.idx  collect_reduce.h.C3BC7944C9BE0142.idx  common.h.3F2C13ABAC87B45C.idx  computers.h.E89732E3D57B3ED4.idx  counting_sort.h.CA3FCFF931FFF4BC.idx  csvfile.h.3B6FAC7452A854D9.idx  debug_uninitialized.h.E204C57F295A1C84.idx  delayed.h.25536CD7C5A032DE.idx  delayed_sequence.h.2FFB43C790D45E80.idx  doubling_dpc.cpp.ED3AB0D0FD149D37.idx  doubling_dpc.h.9DF92483FEC7B549.idx  dpc_commandline.cpp.613826AA77CAFC90.idx  dpc_components.cpp.9418CB5A40D6E3E9.idx  dpc_components.h.18159F35FAD2E59B.idx  dpc_components_test.cpp.97324AC4E715939B.idx  dpc_framework.cpp.CF124122EE83BBD8.idx  dpc_framework.h.FD3CA19F51CDC97E.idx  dpc_framework_commandline.cpp.5404656EBFBDEA6A.idx  file_map.h.AA8A62FE5CF6ACE9.idx  file_map_impl_posix.h.700068061A715AB0.idx  filter.h.B3E7EDCB84048C84.idx  (+109 more)
.github/workflows/: build-package-and-run-tests.yml  c-cpp.yml  cmake-single-platform.yml
data/: gaussian_4_1000.data
data/gaussian_example/: gaussian_4_1000.data  gaussian_4_1000.gt  gaussian_4_1000.npy
data/s_datasets/: s2-groundtruth-plot.xls  s2.gt  s3-cb.txt  s3.gt  s4-cb.txt  s4.gt
data_processors/: convert_to_npy.py  create_birds.py  create_imagenet.py  embed_huggingface.py  gaussian.py  mnist.py  plot.py  road.py  siftsmall.py
experiments/: basic_experiments.py  create_pareto_fronier.py  create_pareto_frontier.py  dbscan_c_test.py  dbscan_low_dim.py  dbscan_test.py  experiments.py  output_knn_graph.py  plot_neighbor_distances.py  plot_pareto_frontier.py  test_bruteforce.py  test_clustering_strategies.py  test_dpc_ann.py  test_fastdp.py  test_fastdp.sh  test_kmeans.py  union_find.py  utils.py
experiments/paper/: brute_force.py  dataset_size_scaling.py  different_graph_methods_on_imagenet.py  kmeans_pareto.py  paper_utils.py  plot_pareto.py  plot_scalability.py  plot_thread_scaling.py  plot_varying_k.py  plotting_utils.py  scalability.py  small.py  test_fastdp.sh  thread_scaling.py  vamana_pareto.py  varying_k.py
experiments/paper/analyze_hyperparameters/: analyze_hyperparameters.py
experiments/paper/dataset_size_scaling/: dataset_size_scaling.py  plot_dataset_size_scaling.py
experiments/paper/pareto/: different_graph_methods_on_imagenet.py  kmeans_pareto.py  plot_pareto.py  test_fastdp.sh  vamana_pareto.py
experiments/paper/thread_scaling/: plot_thread_scaling.py  thread_scaling.py
experiments/paper/varying_k/: plot_varying_k.py  varying_k.py
experiments/paper/varying_num_clusters/: plot_varying_num_clusters.py  varying_num_clusters.py
post_processors/: cluster_eval.py  eval_cluster_centers.py  histogram.py  parse_output.py  plot_decision_graph.py  special_clusters.py
src/: IO.h  RACE.h  ann_utils.h  bruteforce.cpp  bruteforce.h  computers.h  doubling_dpc.cpp  doubling_dpc.h  dpc_commandline.cpp  dpc_components.cpp  dpc_components.h  dpc_framework.cpp  dpc_framework.h  dpc_framework_commandline.cpp  python_bindings.cpp  utils.h
src/dpc_ann/: __init__.py
src/sketching/: LSHFamily.cpp  LSHFamily.h  RACE.cpp  RACE.h
tests/: dpc_components_test.cpp  knn_ground_truth.py  test_basic_experiments.py  test_dpc_experiments.py  test_exact_dpc_python_install.py  test_framework.py  test_framework_commandline.py  test_python_install.py
